--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Каталог товаров</title>
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     <header class="page-header">
@@ -33,11 +34,14 @@
     </header>
     <main class="page-main">
       <div class="container">
-        <h1 class="page-main__title">Каталог товаров</h1>
+        <section class="page-main__title--wrap">
+            <h1 class="page-main__title">Каталог товаров</h1>
+        </section>
+
         <section class="main-catalog">
           <ul class="main-catalog__list">
             <li class="product-preview">
-              <img src="http://placehold.it/260x195" alt="" class="product-preview__img">
+              <img src="../img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="" class="product-preview__img">
               <h3 class="subtitle product-preview__title">Зайчик-попрыгайчик</h3>
               <b class="product-preview__info">Рост 30 см, вес 200 г</b>
               <div class="product-preview__buy">
@@ -46,7 +50,8 @@
               </div>
             </li>
             <li class="product-preview">
-              <img src="http://placehold.it/260x195" alt="" class="product-preview__img">
+              <img src="../img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Корзинка для белья
+" class="product-preview__img">
               <h3 class="subtitle product-preview__title">Корзинка для белья</h3>
               <b class="product-preview__info">Диаметр 15 см, высота 10 см</b>
               <div class="product-preview__buy">
@@ -55,7 +60,7 @@
               </div>
             </li>
             <li class="product-preview">
-              <img src="http://placehold.it/260x195" alt="" class="product-preview__img">
+              <img src="../img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек" class="product-preview__img">
               <h3 class="subtitle product-preview__title">Большая корзинка для игрушек</h3>
               <b class="product-preview__info">Диаметр 30 см, высота 30 см</b>
               <div class="product-preview__buy">
@@ -73,7 +78,9 @@
           <h2 class="subtitle production-view__title">Процесс производства</h2>
 
           <section class="product-preview">
-            <img src="http://placehold.it/260x150" alt="" class="product-preview__img">
+            <img src="../img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства
+
+" class="product-preview__img">
             <p class="text product-preview__descripion">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
             <a href="" class="button product-preview__order">Сделать заказ</a>
           </section>
