--- a/form.html
+++ b/form.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Вязание на заказ</title>
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     <header class="page-header">
@@ -33,7 +34,10 @@
     </header>
     <main class="page-main">
       <div class="container">
-        <h1 class="page-main__title">Вязание на заказ</h1>
+        <section class="page-main__title--wrap">
+            <h1 class="page-main__title">Вязание на заказ</h1>
+        </section>
+
         <form class="form-order" action="https://echo.htmlacademy.ru" method="get">
           <p class="text form-order__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
           <fieldset class="form-order__section">
@@ -50,7 +54,7 @@
           <fieldset class="form-order__section">
             <h2 class="form-order__section-title">Цвет</h2>
             <label class="form-order__label">
-              <input type="subtitle checkbox" class="form-order__input" name="product-color__white" checked>
+              <input type="checkbox" class="form-order__input" name="product-color__white" checked>
               Белый
             </label>
             <label class="subtitle form-order__label">
@@ -78,15 +82,15 @@
             <h2 class="form-order__section-title">ФИО</h2>
             <label class="subtitle form-order__label">
               Имя:
-              <input class="form-order__input" type="text" name="name">
+              <input class="form-order__input" type="text" name="name" placeholder="Введите ваше имя*">
             </label>
             <label class="subtitle form-order__label">
               Фамилия:
-              <input class="form-order__input" type="text" name="surname">
+              <input class="form-order__input" type="text" name="surname" placeholder="Укажите фамилию*">
             </label>
             <label class="subtitle form-order__label">
               Отчество:
-              <input class="form-order__input" type="text" name="patronymic">
+              <input class="form-order__input" type="text" name="patronymic" placeholder="Отчество, если желаете">
             </label>
           </fieldset>
           <fieldset class="form-order__section">
@@ -99,7 +103,7 @@
           </fieldset>
           <fieldset class="form-order__section">
             <h2 class="form-order__section-title">ДОП</h2>
-            <textarea name="message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+            <textarea class="form-order__textarea" name="message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </fieldset>
           <p class="form-order__description-required">*Поля обязательны для заполнения</p>
           <button class="button form-order__submit" type="submit">Отправить заказ</button>
