--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Мишка: Главная страница.</title>
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     <header class="page-header">
@@ -33,13 +34,16 @@
     </header>
     <main class="page-main">
       <div class="container">
-        <h1 class="page-main-title">Милые штуки ручной работы для дома</h1>
+        <section class="page-main__title--wrap page-main__title--warp-index">
+            <h1 class="page-main__title">Милые штуки ручной работы для дома</h1>
+        </section>
+
         <section class="product-menu">
           <ul class="product-menu__list">
-            <li class="product-menu__item">
-              <a href="#" class="product-menu__link">Предметы интерьера</a>
+            <li class="product-menu__item product-menu__link--color-lighter">
+              <a href="#" class="product-menu__link ">Предметы интерьера</a>
             </li>
-            <li class="product-menu__item">
+            <li class="product-menu__item product-menu__link--color-darker">
               <a href="#" class="product-menu__link">Детские игрушки</a>
             </li>
           </ul>
@@ -53,20 +57,20 @@
             <p class="text week-product-description-text">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
             <table class="info-table">
               <tr class="info-table__item">
-                <td class="info-table__value">Цвет:</td>
-                <td class="info-table__value">«Тиффани»/серый</td>
+                <td class="text info-table__value">Цвет:</td>
+                <td class="text info-table__value">«Тиффани»/серый</td>
               </tr>
               <tr class="info-table__item">
-                <td class="info-table__value">Диаметр:</td>
-                <td class="info-table__value">25 см</td>
+                <td class="text info-table__value">Диаметр:</td>
+                <td class="text info-table__value">25 см</td>
               </tr>
               <tr class="info-table__item">
-                <td class="info-table__value">Высота:</td>
-                <td class="info-table__value">15 см</td>
+                <td class="text info-table__value">Высота:</td>
+                <td class="text info-table__value">15 см</td>
               </tr>
             </table>
           </div>
-          <img src="http://placehold.it/260x315" alt="Вязаные корзинки" class="week-product__image">
+          <img src="../img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки" class="week-product__image">
           <b class="week-product__price">Цена: 990 руб.</b>
           <a href="#" class="button week-product-order">ЗАКАЗАТЬ</a>
         </section>
@@ -102,7 +106,7 @@
             <table class="contacts__list">
               <tr class="contacts__item">
                 <td class="text contacts__value">e-mail</td>
-                <td class="text contacts__value"><a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></td>
+                <td class="text contacts__value"><a class="contacts__enail" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></td>
               </tr>
               <tr class="contacts__item">
                 <td class="text contacts__value">адрес:</td>
@@ -110,9 +114,11 @@
               </tr>
             </table>
             <div class="contacts__location">
-              <img class="contacts__location-map" src="http://placehold.it/320x457" alt="">
+              <img class="contacts__location-map" src="../img/map-mobile@1x.jpg" width="322" height="457" alt="г. Санкт-Петербург,
+ул. Большая Конюшенная,
+д. 19/8, офис 101">
             </div>
-            <a class="contacts__write" href="button write-company.html">Напишите нам</a>
+            <a class="button contacts__write" href="write-company.html">Напишите нам</a>
           </div>
         </section>
       </div>
