--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main class="page-main">
       <div class="container">
         <section class="page-main__title--wrap page-main__title--warp-index">
-            <h1 class="page-main__title">Милые штуки ручной работы для дома</h1>
+          <h1 class="page-main__title">Милые штуки ручной работы для дома</h1>
         </section>
 
         <section class="product-menu">
@@ -106,7 +106,9 @@
             <table class="contacts__list">
               <tr class="contacts__item">
                 <td class="text contacts__value">e-mail</td>
-                <td class="text contacts__value"><a class="contacts__enail" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></td>
+                <td class="text contacts__value">
+                  <a class="contacts__enail" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+                </td>
               </tr>
               <tr class="contacts__item">
                 <td class="text contacts__value">адрес:</td>
