--- a/catalog.html
+++ b/catalog.html
@@ -2,18 +2,20 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Каталог товаров</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
-      <div class="container">
-        <a href="#" class="page-header__logo">
+      <div class="page-header__container">
+        <a href="index.html" class="page-header__logo">
           <img src="http://placehold.it/150x100" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
+        <button class="main-nav__toggle" type="button">X</button>
         <nav class="main-nav">
-          <button class="main-nav__toggle" type="button">Open menu</button>
-          <ul class="main-nav__list site-menu">
+
+          <ul class="main-nav__site-menu site-menu">
             <li class="main-nav__item site-menu__item">
               <a href="catalog.html" class="main-nav__link site-menu__link">Каталог товаров</a>
             </li>
@@ -21,7 +23,7 @@
               <a href="form.html" class="main-nav__link site-menu__link">Вязание на заказ</a>
             </li>
           </ul>
-          <ul class="main-nav__list user-menu">
+          <ul class="main-nav__user-menu user-menu">
             <li class="main-nav__item user-menu__item">
               <a href="" class="main-nav__link user-menu__link">Поиск по сайту</a>
             </li>
@@ -72,14 +74,14 @@
         </section>
       </div>
       <section class="production-view">
-        <div class="container">
+        <div class="container production-view__container">
 
           <h2 class="subtitle production-view__title">Процесс производства</h2>
 
-          <section class="product-preview">
+          <section class="production-preview">
             <img src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства" class="product-preview__img">
-            <p class="text product-preview__descripion">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-            <a href="" class="button product-preview__order">Сделать заказ</a>
+            <p class="text production-preview__descripion">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+            <a href="" class="button production-preview__order">Сделать заказ</a>
           </section>
 
         </div>
@@ -88,7 +90,10 @@
 
     </main>
     <footer class="page-footer">
-      <div class="container">
+      <div class="container page-footer__container">
+      <a href="#" class="page-footer__logo">
+        <img src="http://placehold.it/86x35" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
+      </a>
         <ul class="page-footer__social social">
           <li class="social__item">
             <a href="#" class="social__link social__link--inst"></a>inst
@@ -107,7 +112,7 @@
             <img class="coopyright__img" src="http://placehold.it/27x34" alt="">
           </a>
         </div>
-      </div>
+        </div>
     </footer>
 
   </body>
