--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Мишка: Главная страница.</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
-      <div class="container">
-        <a href="#" class="page-header__logo">
+      <div class="page-header__container">
+        <a href="index.html" class="page-header__logo">
           <img src="http://placehold.it/150x100" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
+        <button class="main-nav__toggle" type="button">X</button>
         <nav class="main-nav">
-          <button class="main-nav__toggle" type="button">Open menu</button>
-          <ul class="main-nav__list site-menu">
+
+          <ul class="main-nav__site-menu site-menu">
             <li class="main-nav__item site-menu__item">
               <a href="catalog.html" class="main-nav__link site-menu__link">Каталог товаров</a>
             </li>
@@ -21,7 +23,7 @@
               <a href="form.html" class="main-nav__link site-menu__link">Вязание на заказ</a>
             </li>
           </ul>
-          <ul class="main-nav__list user-menu">
+          <ul class="main-nav__user-menu user-menu">
             <li class="main-nav__item user-menu__item">
               <a href="" class="main-nav__link user-menu__link">Поиск по сайту</a>
             </li>
@@ -33,12 +35,12 @@
       </div>
     </header>
     <main class="page-main">
-      <div class="container">
         <section class="title__wrap title__wrap--index">
           <h1 class="title">Милые штуки ручной работы для дома</h1>
         </section>
 
         <section class="product-menu">
+          <div class="product-menu__container">
           <ul class="product-menu__list">
             <li class="product-menu__item product-menu__link--color-lighter">
               <a href="#" class="product-menu__link ">Предметы интерьера</a>
@@ -47,13 +49,15 @@
               <a href="#" class="product-menu__link">Детские игрушки</a>
             </li>
           </ul>
+          </div>
         </section>
         <section class="week-product">
+          <div class="week-product__container">
           <div class="week-product__title">
             <h2 class="page-subtitle">Вязаные корзинки</h2>
             <h3 class="week-product__title-description">Товар недели</h3>
           </div>
-          <div class="week-product-description">
+          <div class="week-product__description">
             <p class="text week-product-description-text">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
             <table class="info-table">
               <tr class="info-table__item">
@@ -69,13 +73,14 @@
                 <td class="text info-table__value">15 см</td>
               </tr>
             </table>
-          </div>
           <img src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки" class="week-product__image">
           <b class="week-product__price">Цена: 990 руб.</b>
-          <a href="#" class="button week-product-order">ЗАКАЗАТЬ</a>
+          <a href="#" class="button week-product__order">ЗАКАЗАТЬ</a>
+          </div>
+          </div>
         </section>
         <section class="advantages">
-          <div class="container">
+          <div class="advantages__container">
             <h2 class="page-subtitle">Коротко о нас:</h2>
             <ul class="advantages__list">
               <li class="subtitle advantages__item">Экологически чистые материалы</li>
@@ -85,23 +90,27 @@
               <li class="subtitle advantages__item">Поддержка отечественного производителя</li>
               <li class="subtitle advantages__item">Поставляется в подарочной упаковке</li>
             </ul>
-          </div>
+            </div>
         </section>
         <section class="reviews">
-          <h2 class="page-subtitle">Отзывы</h2>
+          <div class="container reviews__container">
+          <h2 class="page-subtitle reviews__title">Отзывы</h2>
           <div class="reviews__list reviews__slider">
             <blockquote class="text reviews__item">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</blockquote>
             <cite class="reviews__author">
               <b class="subtitle reviews__author-name">Анастасия Красильникова</b>
               <b class="text reviews__author-email">@misssssiskras</b>
             </cite>
+          </div>
+          <div class="reviews__nav">
             <button class="reviews__button reviews__button-next" type="button" name="button"></button>
             <button class="reviews__button reviews__button-previous" type="button" name="button"></button>
-            <a href="#" class="button reviews__wirte">Написать</a>
           </div>
+            <a href="#" class="button reviews__write">Написать</a>
+            </div>
         </section>
         <section class="contacts">
-          <div class="container">
+          <div class="contacts__container">
             <h3 class="page-subtitle">Контакты</h3>
             <table class="contacts__list">
               <tr class="contacts__item">
@@ -119,12 +128,14 @@
               <img class="contacts__location-map" src="img/map-mobile@1x.jpg" width="322" height="457" alt="г. Санкт-Петербург,ул. Большая Конюшенная,д. 19/8, офис 101">
             </div>
             <a class="button contacts__write" href="write-company.html">Напишите нам</a>
-          </div>
+            </div>
         </section>
-      </div>
     </main>
     <footer class="page-footer">
-      <div class="container">
+      <div class="container page-footer__container">
+      <a href="#" class="page-footer__logo">
+        <img src="http://placehold.it/86x35" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
+      </a>
         <ul class="page-footer__social social">
           <li class="social__item">
             <a href="#" class="social__link social__link--inst"></a>inst
@@ -143,7 +154,7 @@
             <img class="coopyright__img" src="http://placehold.it/27x34" alt="">
           </a>
         </div>
-      </div>
+        </div>
     </footer>
 
   </body>
